# cobra

./: .gitignore  README.md  build  push  requirements.txt  run-tests  setup.cfg
e2e-tests/: docker-compose.yml
e2e-tests/tests/: Dockerfile
e2e-tests/tests/src/: conftest.py  requirements.txt  share.py  test_backup_restore.py  test_smoke.py
src/cobra/: __init__.py  __main__.py  api.py  api_test.py  aux_stuff.py  banner.py  cli.py  cli_handler.py  cli_handler_test.py  cli_test.py  conftest.py  exc.py  google_drive.py  hooks.py  hooks_test.py
src/coverme/: __init__.py  __main__.py  about.json  api.py  api_test.py  aux_stuff.py  banner.py  cli.py  cli_handler.py  cli_handler_test.py  cli_test.py  exc.py  google_drive.py  hooks.py
