[metadata]
version = 0.0.1
name = cobra
author = yell0w4x
author_email = yell0w4x@gmail.com
description = Comprehensive Backing up and Restoration Archiver. Docker volumes, bind mounts and plain directory backup automation tool
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yellow4x/cobra
project_urls =
    Bug Tracker = https://github.com/yellow4x/cobra/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
license = MIT
keywords = Docker volumes backup


[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = 
    aiohttp==3.7.4.post0


[options.packages.find]
where = src


[options.entry_points]
console_scripts = 
    cobra = cobra.cli:main

