[metadata]
version = 0.0.1
name = cobra
author = yell0w4x
author_email = yell0w4x@gmail.com
description = Comprehensive Backing up and Restoration Archiver. Docker volumes, bind mounts and plain directory backup automation tool
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yellow4x/cobra
project_urls =
    Bug Tracker = https://github.com/yellow4x/cobra/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
license = MIT
keywords = Docker volumes backup


[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires = 
    docker==6.0.1
    google-api-python-client==2.74.0
    google-auth==2.16.0
    google-auth-httplib2==0.1.0
    google-auth-oauthlib==0.8.0

[options.packages.find]
where = src


[options.entry_points]
console_scripts = 
    cobra = cobra.cli:main

