[metadata]
version = 0.0.4
name = cobra-archiver
author = yell0w4x
author_email = yell0w4x@gmail.com
description = Comprehensive Backing up and Restoration Archiver. Docker volumes, bind mounts and plain directory backup automation tool.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yell0w4x/cobra
project_urls =
    Bug Tracker = https://github.com/yell0w4x/cobra/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
license = MIT
keywords = Docker volumes backup


[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires = 
    attrs==22.2.0
    cachetools==5.3.0
    certifi==2022.12.7
    charset-normalizer==3.0.1
    docker==6.0.1
    exceptiongroup==1.1.0
    ezenv==0.92
    freezegun==1.2.2
    google-api-core==2.11.0
    google-api-python-client==2.74.0
    google-auth==2.16.0
    google-auth-httplib2==0.1.0
    google-auth-oauthlib==0.8.0
    googleapis-common-protos==1.58.0
    httplib2==0.21.0
    idna==3.4
    iniconfig==2.0.0
    markdown-it-py==2.1.0
    mdurl==0.1.2
    oauthlib==3.2.2
    packaging==23.0
    pluggy==1.0.0
    protobuf==4.21.12
    pyasn1==0.4.8
    pyasn1-modules==0.2.8
    Pygments==2.14.0
    pyparsing==3.0.9
    pyproject_hooks==1.0.0
    pytest==7.2.1
    pytest-lazy-fixture==0.6.3
    python-dateutil==2.8.2
    requests==2.28.2
    requests-oauthlib==1.3.1
    rich==13.3.1
    rsa==4.9
    six==1.16.0
    tomli==2.0.1
    uritemplate==4.1.1
    urllib3==1.26.14
    websocket-client==1.5.0

[options.packages.find]
where = src


[options.entry_points]
console_scripts = 
    cobra = cobra.cli:main

